// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui:create:atomic when using an existing pageId (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "1YlrWbKI6kgpcX/5spCmIko0kgg=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "8AayDC90AmCwDykctBv05Cq9zu4=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "2WXM24xZscVOUHVUti5Z8stWW2A=",
                  "name": "template-1.html",
                },
              ],
              "hash": "OlEsA/qWpj7+9r4LJ8V+2FRE1OE=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "sWUDtgn9DiTjvYlLdoF4EaGoClw=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "pPdA06Q+ujtEyI7kflypbd5kiUg=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "5P8q9sBQYOIFBbud8itUocf8QuA=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "dIKI3aRn/2K6aO5RgC2zfGQ2wg8=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "61GVF7l8bCVXW00H2rtInTKwoqY=",
              "name": "index.css",
            },
          ],
          "hash": "FQZ6fv/Z/8DhwZWuUbrLwgTt6r8=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Yhwg1zaohXJmi0xJFywAlsL02ZA=",
              "name": "atomic.ts",
            },
          ],
          "hash": "ZyOIYW/4w45sOzwmwIaFevE1VVM=",
          "name": "utils",
        },
      ],
      "hash": "dNPSts5x0Oqehjz8sFo22X9vK5w=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "GCtPEPdDHbnv6hw7mx/iBvIiHbk=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (using the list prompt of available pages) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "bBk6DoprMUqcw8a48oUQpkyFxkE=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "dZCPeiAxqOaVVtRsZz+MidfshDs=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "UEgD2PjQu6qgn3nWQVaFnfNtfCg=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "QJjgDAdWQehYt60rPIq3b5Urcng=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "xrt7puz0ZnvNnC32f8nDYJHvCcQ=",
                  "name": "template-1.html",
                },
              ],
              "hash": "BPEklM42OInkFci0QuyGusyadQI=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "DP1K1CMgX0s13uPyh6DxDf2KDUI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "hxdjpR//PsLO6dvB4OghA4MkP8A=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "zcDXsMe88fA/wmx5tmFkfSQG7p4=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "9rxSwzfvOxakEzQoDKgmmtgL2DU=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "U0XExuwJA8zpHzmPNOnoAXbRUoY=",
              "name": "index.css",
            },
          ],
          "hash": "4l9E8DZM4BHRPkTYiQihBKLKe1c=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "s62u03kWBMqmtpvRgY8dy/usU/c=",
              "name": "atomic.ts",
            },
          ],
          "hash": "Q9gDKXuZHVN4ikM70Un69oZ/GKg=",
          "name": "utils",
        },
      ],
      "hash": "j9cAks0quLyTN84opnsheTegHPc=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "Nr3j7z5PKsAqgxVQ+hWUi0ur1nM=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using the default page config (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "bBk6DoprMUqcw8a48oUQpkyFxkE=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "dZCPeiAxqOaVVtRsZz+MidfshDs=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "UEgD2PjQu6qgn3nWQVaFnfNtfCg=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "LiPFXpS1sKZg/jHFeC2NZ0CJU6M=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "OMU1pEfGxxywcokm8aFD8znPyaI=",
                  "name": "template-1.html",
                },
              ],
              "hash": "+fkWdok/HnrqsmuNKot00n9mAGw=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "DP1K1CMgX0s13uPyh6DxDf2KDUI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "hxdjpR//PsLO6dvB4OghA4MkP8A=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "mN3OMfRS4rnN0gSb4G3ikXw+WFg=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "9rxSwzfvOxakEzQoDKgmmtgL2DU=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wOz9MvRYciTdXtc2nbTYjdqphzo=",
              "name": "index.css",
            },
          ],
          "hash": "/i4ylsDPXd6unLft/Rk/HO73WHE=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "s62u03kWBMqmtpvRgY8dy/usU/c=",
              "name": "atomic.ts",
            },
          ],
          "hash": "Q9gDKXuZHVN4ikM70Un69oZ/GKg=",
          "name": "utils",
        },
      ],
      "hash": "inWZt3frzA8egVzFmMRQiBsgABU=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "c8JiUF+lYEw2HBxvArluBb06ma0=",
  "name": "normalizedDir",
}
`;
